--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "hbs": "^4.2.0",
     "pg": "^8.7.3",
