--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "babka-apteka",
   "version": "1.0.0",
-  "description": "",
+  "description": "Hello!",
   "main": "index.js",
   "scripts": {
     "webpack": "webpack -wd eval-source-map",
