--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "auth-check": "^1.3.0",
     "axios": "^0.27.2",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
@@ -45,6 +47,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "sequelize": "^6.21.3",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "session-file-store": "^1.5.0"
   }
 }
